prevent scrollbar in sidebar from showing when not needed

--- a/front_end/css/less/module/sidebar.less
+++ b/front_end/css/less/module/sidebar.less
@@ -5,9 +5,12 @@
     width: 271px;
     font-size: .875em;
     line-height: 1.5714;
-    height: 75%; /*accomodate for the persistent header */
-    overflow-y: scroll;
-   
+    max-height: 100%; 
+    overflow-y: auto;
+}
+
+.open-definition ol {
+    padding-bottom: 200px;
 }
 
 .active .open-definition {
